getComputedStyle().width wrong after text changed https://bugs.webkit.org/show_bug.cgi?id=106611

Patch by Yuki Sekiguchi <yuki.sekiguchi@access-company.com> on 2013-06-26
Reviewed by Dean Jackson.

Source/WebCore:

When a new RenderText is created, NodeRenderingContext::createRendererForTextIfNeeded() sets a style to the RenderText.
If a font in the new style needs transcode (e.g. Meiryo), styleDidChange() calls transformText().
It sets a preferredLogicalWidthsDirty flag.
After that, createRendererForTextIfNeeded() inserts the RenderText to its parent renderer.
However, RenderObjectChildList::insertChildNode() doesn't set a preferredLogicalWidthsDirty flag of owner
because a preferredLogicalWidthsDirty flag of the RenderText is already true.

Inserting new child should always sets a preferredLogicalWidthsDirty flag.
Therefore, this patch called setPreferredLogicalWidthsDirty() of owner.

Test: fast/dynamic/empty-absolute-innerhtml-transcoding-text.html

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::insertChildNode):

LayoutTests:

* fast/dynamic/empty-absolute-innerhtml-transcoding-text-expected.html: Added.
* fast/dynamic/empty-absolute-innerhtml-transcoding-text.html: Added.

Canonical link: https://commits.webkit.org/136138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152005 268f45cc-cd09-0410-ab3c-d52691b4dbfc